<resources>

    <string name="enter_phone_header">Введите ваш номер телефона</string>
    <string name="enter_phone_hint">+7(___)___-__-__</string>

    <string name="enter_code_header">Введите код подтверждения</string>
    <string name="enter_code_hint">- - - - - -</string>

    <string name="hyperlink_processing_and_storage"><u>Политика обработки и хранения данных</u></string>
    <string name="hyperlink_privacy_policy"><u>Политика конфиденциальности</u></string>

    <string name="welcome_header">Добро\nпожаловать</string>
    <string name="welcome_description">Приветствуем вас в нашем мессенджере.\nЗдесь вы можете общаться свободно!</string>

    <string name="register_header">Регистрация</string>


    <string name="app_name">Scribo Chat</string>
    <string name="app_title_chats">Чаты</string>
    <string name="app_title_contacts">Контакты</string>
    <string name="app_title_settings">Настройки</string>




    <string name="app_title_create_group">Создание группы</string>


    <!-- Default -->
    <string name="app_fullname_default">Имя Фамилия</string>
    <string name="app_last_message_default">Привет, как дела?</string>
    <string name="app_state_default">Онлайн</string>
    <string name="app_number_phone_default">+79857493395</string>
    <string name="app_login_default">saltario</string>
    <string name="app_bio_default">О себе</string>
    <!-- Toasts -->
    <string name="app_toast_data_update">Данные обновлены</string>
    <string name="app_toast_welcome_message">Добро пожаловать</string>
    <!-- Other -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_content_description">content description</string>


    <string name="button_next">Продолжить</string>
    <string name="button_done">Готово</string>


    <string name="login_get_code">Получить код</string>

    <!-- Login -->
    <string name="login_text_set_phone">Введите номер телефона</string>
    <string name="login_text_login">Войти</string>
    <string name="login_text_register">Регистрация</string>

    <!-- Welcome -->
    <string name="welcome_text_welcome">Добро пожаловать</string>
    <string name="welcome_text_continue">Продолжить</string>
    <string name="welcome_privacy_hyperlink"><u>Политика конфиденциальности</u></string>
    <string name="welcome_text_description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>

    <!-- Settings -->
    <string name="settings_text_account">Аккаунт</string>
    <!-- Settings Buttons-->
    <string name="settings_button_data">Данные</string>
    <string name="settings_button_appearance">Оформление</string>
    <string name="settings_button_exit_profile">Выйти из аккаунта</string>
    <!-- Settings Hyperlinks-->

    <!-- Settings Labels-->
    <string name="settings_label_number_phone">Нажмите чтобы изменить номер телефона</string>
    <string name="settings_label_username">Нажмите чтобы изменить имя пользователя</string>
    <string name="settings_label_bio">Нажмите чтобы изменить описание</string>
    <!-- Settings Hints-->
    <string name="settings_input_username_hint">Username</string>
    <string name="settings_input_bio_hint">Bio</string>
    <string name="settings_input_name_hint">Имя</string>
    <string name="settings_input_surname_hint">Фамилия</string>
    <!-- Settings Toasts-->
    <string name="settings_toast_name_is_empty">Имя не может быть пустым</string>
    <string name="settings_toast_username_is_empty">Имя пользователя пустое</string>
    <string name="settings_toast_username_not_unique">Имя не уникально</string>
    <!-- Settings action menu -->
    <string name="settings_action_menu_change_name">Изменить имя</string>
    <string name="settings_action_menu_exit">Выход</string>

    <!-- Register -->

    <string name="register_text_enter_code">Введите код</string>
    <string name="register_text_we_sent">Мы отправили вам смс с кодом проверки на ваш телефон</string>
    <!-- Register Hints-->


    <!-- Register Toasts-->
    <string name="register_toast_enter_phone_number">Введите номер телефона!</string>

    <!-- Chat -->
    <!-- Chat Hints-->
    <string name="chat_input_message">Сообщение</string>
    <string name="chat_record">Запись</string>
    <!-- Chat Toasts-->
    <string name="chat_toast_message_is_empty">Сообщение не может быть пустым</string>
    <string name="chat_toast_download_success">Загружено</string>
    <string name="single_chat_action_menu_clear">Очистить чат</string>
    <string name="single_chat_action_menu_delete">Удалить чат</string>
    <string name="chat_toast_clear">Чат очищен</string>
    <string name="chat_toast_delete">Чат удален</string>

    <plurals name="count_members">
        <item quantity="one">%d участник</item>
        <item quantity="few">%d участника</item>
        <item quantity="many">%d участников</item>
        <item quantity="other">%d участников</item>
    </plurals>

    <!-- Nav Bottom -->
    <string name="nav_bottom_chats">Чаты</string>
    <string name="nav_bottom_settings">Настройки</string>
    <string name="nav_bottom_contacts">Контакты</string>
    <string name="register_input_name">Имя</string>
    <string name="register_input_surname">Фамилия</string>
    <string name="register_input_username">Никнейм</string>
    <string name="register_input_mail">Почта</string>


</resources>