<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/toolbar">

    <ImageView
        android:id="@+id/toolbar_single_chat_back"
        style="@style/toolbar_button_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/app_content_description"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/toolbar_single_chat_photo"
        style="@style/toolbar_photo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/chat_bar_panel_icons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/toolbar_single_chat_photo"
        app:layout_constraintStart_toEndOf="@+id/toolbar_single_chat_back"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/toolbar_single_chat_fullname"
            style="@style/text_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/app_fullname_default" />

        <TextView
            android:id="@+id/toolbar_single_chat_state"
            style="@style/text_small"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_single_chat_fullname"
            tools:text="@string/app_state_default" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>