<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.screens.changes.SettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_header_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/settings_photo"
            style="@style/profile_photo_large"
            android:layout_marginTop="@dimen/app_vertical_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/app_content_description" />

        <ImageView
            android:id="@+id/settings_btn_edit_profile"
            style="@style/button_circle"
            android:src="@drawable/button_edit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/settings_photo"
            app:layout_constraintTop_toTopOf="@+id/settings_photo"
            android:contentDescription="@string/app_content_description"/>

        <TextView
            android:id="@+id/settings_fullname"
            style="@style/text_normal"
            android:layout_marginTop="@dimen/app_vertical_margin"
            app:layout_constraintBottom_toTopOf="@+id/settings_status"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settings_photo"
            tools:text="@string/app_fullname_default" />

        <TextView
            android:id="@+id/settings_status"
            style="@style/text_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings_fullname"
            tools:text="@string/app_state_default" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_phone_and_nickname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/app_vertical_margin"
        app:layout_constraintEnd_toStartOf="@+id/end_vertical_guideline"
        app:layout_constraintStart_toStartOf="@+id/start_vertical_guideline"
        app:layout_constraintTop_toBottomOf="@+id/settings_header_block">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/settings_btn_change_number_phone"
            style="@style/grey_button"
            android:layout_marginTop="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/settings_phone_number"
                style="@style/text_normal"
                android:padding="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/settings_btn_change_number_phone"
                tools:text="@string/app_number_phone_default" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/settings_btn_change_username"
            style="@style/grey_button"
            android:layout_width="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginStart="@dimen/app_horizontal_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/settings_btn_change_number_phone"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/settings_username"
                style="@style/text_normal"
                android:padding="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/app_login_default" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_bio"
        style="@style/grey_button"
        android:layout_width="0dp"
        android:layout_height="56dp"
        app:layout_constraintEnd_toStartOf="@+id/end_vertical_guideline"
        app:layout_constraintStart_toStartOf="@+id/start_vertical_guideline"
        app:layout_constraintTop_toBottomOf="@+id/settings_phone_and_nickname">

        <TextView
            android:id="@+id/bio_label"
            style="@style/text_small"
            android:fontFamily="@font/roboto"
            android:textColor="@color/dark_text_color_white"
            android:text="@string/settings_bio"
            android:layout_marginTop="5dp"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/settings_bio" />

        <TextView
            android:id="@+id/bio"
            style="@style/text_normal"
            android:fontFamily="@font/roboto"
            android:text="@string/app_bio_default"
            android:textColor="@color/dark_text_color_white"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bio_label"
            tools:text="@string/app_bio_default" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_label_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/app_vertical_margin"
        app:layout_constraintStart_toStartOf="@+id/start_vertical_guideline"
        app:layout_constraintTop_toBottomOf="@+id/settings_bio">

        <TextView
            android:id="@+id/settings_label"
            style="@style/text_title"
            android:text="@string/app_title_settings"
            android:layout_marginHorizontal="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/app_title_settings" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_btn_data"
        style="@style/grey_button"
        android:layout_width="0dp"
        app:layout_constraintEnd_toStartOf="@+id/end_vertical_guideline"
        app:layout_constraintStart_toStartOf="@+id/start_vertical_guideline"
        app:layout_constraintTop_toBottomOf="@+id/settings_label_layout">

        <TextView
            android:id="@+id/settings_data"
            style="@style/text_normal"
            android:fontFamily="@font/roboto"
            android:text="@string/settings_button_data"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/settings_button_data_icon"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/settings_button_data" />

        <ImageView
            android:id="@+id/settings_button_data_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="@dimen/app_horizontal_margin"
            android:padding="5dp"
            android:src="@drawable/icon_settings_data"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/app_content_description"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_btn_appearance"
        style="@style/grey_button"
        android:layout_width="0dp"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toStartOf="@+id/end_vertical_guideline"
        app:layout_constraintStart_toStartOf="@+id/start_vertical_guideline"
        app:layout_constraintTop_toBottomOf="@+id/settings_btn_data">

        <TextView
            android:id="@+id/settings_appearance"
            style="@style/text_normal"
            android:fontFamily="@font/roboto"
            android:text="@string/settings_button_appearance"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/settings_button_appearance_icon"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/settings_button_appearance" />

        <ImageView
            android:id="@+id/settings_button_appearance_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="@dimen/app_horizontal_margin"
            android:padding="5dp"
            android:src="@drawable/icon_settings_appearance"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/app_content_description"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_btn_exit_profile"
        style="@style/orange_stroke_button"
        android:layout_width="0dp"
        app:layout_constraintEnd_toStartOf="@+id/end_vertical_guideline"
        app:layout_constraintStart_toStartOf="@+id/start_vertical_guideline"
        app:layout_constraintTop_toBottomOf="@+id/settings_btn_appearance">

        <TextView
            android:id="@+id/settings_exit_profile"
            style="@style/text_input"
            android:fontFamily="@font/roboto"
            android:paddingEnd="@dimen/app_horizontal_margin"
            android:text="@string/settings_button_exit_profile"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/settings_button_exit_profile_icon"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/settings_button_exit_profile"
            tools:ignore="RtlSymmetry" />

        <ImageView
            android:id="@+id/settings_button_exit_profile_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="@dimen/app_horizontal_margin"
            android:padding="5dp"
            android:src="@drawable/icon_exit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/app_content_description"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/settings_hyperlink_processing_and_storage"
        style="@style/text_hyperlink"
        android:text="@string/hyperlink_processing_and_storage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_btn_exit_profile"
        tools:text="@string/hyperlink_processing_and_storage" />

    <TextView
        android:id="@+id/settings_hyperlink_privacy_policy"
        style="@style/text_hyperlink"
        android:layout_marginTop="@dimen/app_vertical_margin"
        android:text="@string/hyperlink_privacy_policy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_hyperlink_processing_and_storage"
        tools:text="@string/hyperlink_privacy_policy" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start_vertical_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="48dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end_vertical_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="48dp" />

</androidx.constraintlayout.widget.ConstraintLayout>